--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <article id="cursos">
     <ul class="cursos container">
       <li class="cursos-item">
-        <img src="/img/cursos/piano.png" width="32" height="32" alt="imagem do piano">
+        <img src="./img/cursos/piano.png" width="32" height="32" alt="imagem do piano">
         <h2>Piano popular</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolorem neque, eveniet quas officiis rerum molestias</p>
         <a href=""><img src="./img/cursos/seta.png" alt="imagem da seta"></a>
